[tool.poetry]
name = "spherehub"
version = "0.1.0"
description = "Social network project to apply new knowledge"
authors = ["alex-ib <alejo1ibarra@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
uvicorn = "^0.27.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.2"
mkdocs = "^1.5.3"
python-dotenv = "^1.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
