[tool.poetry]
name = "spherehub"
version = "0.1.0"
description = "Social network project to apply new knowledge"
authors = ["alex-ib <alejo1ibarra@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
uvicorn = "^0.27.1"
pydantic = {extras = ["email"], version = "^2.6.2"}
passlib = "^1.7.4"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.28"}
psycopg2 = "^2.9.9"
alembic = "^1.13.1"
asyncpg = "^0.29.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.2"
mkdocs = "^1.5.3"
python-dotenv = "^1.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
